<resources>
    <string name="app_name">Student Performance</string>
    <string name="student_information_form">Student information form</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="role">Role</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="delete_user">Delete user</string>
    <string name="confirm_user_delete_message">Are your sure that you want to delete this user?</string>
    <string name="agree">Agree</string>
    <string name="dismiss">Dismiss</string>
    <string name="create_user">Create user</string>
    <string name="user_list">User list</string>
    <string name="search">Search</string>
    <string name="update_user">Update user</string>
    <string name="update">Update</string>
    <string name="username_exists">This username already exists</string>
    <string name="email_exists">This email already exists</string>
    <string name="edit_details">Edit details</string>
    <string name="edit_user">Edit user</string>
    <string name="log_out">Log out</string>
    <string name="user_details">User details</string>
    <string name="registration_date">Registration date:</string>
    <string name="predicted_performance">Predicted performance:</string>
    <string name="email_title">Email:</string>
    <string name="username_title">Username:</string>
</resources>
