<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_home.xml"
    app:startDestination="@id/addDetailsFragment">

    <fragment
        android:id="@+id/addDetailsFragment"
        android:name="com.perisic.luka.studentperformance.ui.addDetails.AddDetailsFragment"
        android:label="@string/student_information_form"
        tools:layout="@layout/fragment_add_details" />

    <fragment
        android:id="@+id/createUserFragment"
        android:name="com.perisic.luka.studentperformance.ui.editUser.CreateUserFragment"
        android:label="@string/create_user"
        tools:layout="@layout/fragment_create_user" />

    <fragment
        android:id="@+id/userListFragment"
        android:name="com.perisic.luka.studentperformance.ui.userList.UserListFragment"
        android:label="@string/user_list"
        tools:layout="@layout/fragment_user_list">

        <action
            android:id="@+id/action_userListFragment_to_createUserFragment"
            app:destination="@id/createUserFragment" />

        <action
            android:id="@+id/action_userListFragment_to_updateUserFragment"
            app:destination="@id/updateUserFragment" />
        <action
            android:id="@+id/action_userListFragment_to_userDetailsFragment"
            app:destination="@id/userDetailsFragment" />

    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.perisic.luka.studentperformance.ui.auth.LoginFragment"
        android:label=" "
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/updateUserFragment"
        android:name="com.perisic.luka.studentperformance.ui.editUser.UpdateUserFragment"
        android:label="@string/update_user"
        tools:layout="@layout/fragment_create_user">

        <argument
            android:name="userId"
            app:argType="integer" />

    </fragment>
    <fragment
        android:id="@+id/userDetailsFragment"
        android:name="com.perisic.luka.studentperformance.ui.userSingle.UserDetailsFragment"
        android:label="@string/user_details"
        tools:layout="@layout/fragment_user_details" >

        <argument
            android:name="userId"
            app:argType="integer"/>

    </fragment>


</navigation>